--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -6,7 +6,7 @@
     <title>Document</title>
  </head>
 
- {{!-- --renderiza el contenido del HOME --}}
+ {{!-- --renderiza el contenido del index --}}
     <body>
         {{{body}}}
     </body>
