correccion de rutas

--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -1,10 +1,12 @@
 
 {{!-- info que viene de servidor y se inyecta a MAIN--}}
 <div>
-    <h1>Bienvenido {{user.first_name}} {{user.last_name}} </h1>
-    <form action="/api/session/logaut" method="POST">
-        <button type="submit" >Cerrar sesión</button>
-    </form>
+    <h1>BIENVENIDO</h1>
+    <p>{{user.first_name}} {{user.last_name}}</p>
+
+    <form action="/api/sessions/logout" method="POST">
+        <button type="submit">Cerrar Sesión</button>
+    </form> 
     
     <h2>Productos</h2>
     <form method="GET" action="/">
