--- a/src/public/css/views.css
+++ b/src/public/css/views.css
@@ -1,7 +1,6 @@
 .products-container {
     display: flex;
     flex-wrap: wrap;
-
     gap: 20px;
 }
 
@@ -16,9 +15,9 @@
 }
 
 .imgProducts {
-    width: 98%; /* Ajusta la imagen al ancho del contenedor */
-    height: 200px; /* Define una altura fija */
-    object-fit: cover; /* Recorta la imagen para llenar el espacio sin deformarla */
+    width: 98%; 
+    height: 200px; 
+    object-fit: cover; 
     display: block;
     margin: 0 auto;
 }
@@ -28,7 +27,7 @@ p {
 }
 
 .products-cart-container{
-    width: 80%; /* Ocupa todo el ancho de la pantalla */
+    width: 80%; 
     margin: auto;
     padding: 0;
 }
@@ -42,8 +41,8 @@ p {
 }
 
 .imgCart {
-    width: 110px; /* Ajusta la imagen al ancho del contenedor */
-    height: 105px; /* Define una altura fija */
+    width: 110px;
+    height: 105px;
     object-fit: cover; 
 }
 
